--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,5 +7,9 @@
   <body>
     <h1>About</h1>
     <p> The Vintage Arsenal</p>
+    <p>The Vintage Arsenal is an E-Commerce site for passionate Arsenal Football Club fans to buy vintage merchandise from the clubs illustrious 100 plus year history at affordable prices.</p>
+    <p>Customers will purchase our high-end customer service and the ability to find authentic vintage Arsenal Football club gear at retail cheap prices</p>
+    <p>It provides customers to experience the old era of Arsenal in the new one.</p> 
+    <p>We find sellers of vintage goods and then promote their goods on our website and when someone purchases something we first quality check and verify if the product is authentic then continue with the transaction</p>
   </body>
 </html>
