--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -7,5 +7,8 @@
   <body>
     <h1>Conact</h1>
     <p>1-800-ARSENAL</p>
+    <p>We can help you with all returns and exchanges as long as they are WITHIN 30 DAYS of order purchase</p>
+    <p>Please make sure not of order delivery date but order purchase date</p>
+    <p>You can also email us your issues at services@thevintagearsenal.com. Please add your order ID and email address in the subject. Thank you</p>
   </body>
 </html>
