--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,9 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>Welcome to The Vintage Arsenal</p>
     <p> Zia Farrukh Shaikh</p>
+
+    <im src="/images/logo.jpg">
   </body>
 </html>
