--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,6 @@
     <p>Welcome to The Vintage Arsenal</p>
     <p> Zia Farrukh Shaikh</p>
 
-    <im src="/images/logo.jpg">
+    <im src="/public/images/logo.jpg">
   </body>
 </html>
