--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,5 +4,68 @@ body {
 }
 
 a {
-  color: #00B7FF;
+  color: #15698a;
 }
+
+h1{
+  font-family: Arial, sans-serif;
+  color: rgb(5, 55, 217);
+  }
+ img {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+ }
+ img:hover {
+  border: 1px solid rgb(255, 255, 255);
+ }
+
+ ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  border: 1px solid #080808f2;
+  background-color: #0b0a0a;
+ }
+ li {
+  float: left;
+ }
+ li a {
+  display: block;
+  color: rgb(70, 137, 76);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+ }
+ li a:hover:not(.active) {
+  background-color: #ddd;
+ }
+ li a.active {
+  color: white;
+  background-color: #4CAF50;
+ }
+
+ .button1 {
+  background-color: #fcd308f0;
+  font-size: 10px;
+  border-radius: 4px;
+  border: 2px solid #4CAF50;
+   -webkit-transition-duration: 0.4s; /* Safari */
+   transition-duration: 0.4s;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px
+  50px 0 rgba(149, 12, 12, 0.19);
+  }
+  product {
+   margin: 5px;
+   border: 2px solid #ccc;
+   float: left;
+  background: #ffffe6;
+  box-shadow: 5px 5px 2px #888888;
+  min-width: 200px;
+  max-width: 200px;
+  min-height: 250px;
+  max-height: 250px;
+   border-radius: 5px;
+   padding: 5px;
+  }
