--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,10 +1,12 @@
 <table bgcolor='red' width='100%'> <tr>
     <td width='20%' align='left'>
-    <a href="/"><img src="/public/images/logo.jpg" width="70" height="40">
+    <a href="/"><img src="/public/images/Arsenal.jpg" width="70" height="40">
     </a></td>
      <td width='60%' align='center'><h1>The Vintage Arsenal</h1></td>
-     <td width='10%' align='center'>Login Control</td>
-     <td width='10%' align='center'>Cart Control</td>
+     <td width='10%' align='center'>Jersey</td>
+     <td width='10%' align='center'>Scarfs</td>
+     <td width='10%' align='center'>Memorabillia</td>
+     <td width='10%' align='center'>Cart</td>
     </tr></table>
     <p> SEARCH CONTROL </p>
     <ul>
