--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,12 @@
     <h1><%= title %></h1>
     <p>Welcome to The Vintage Arsenal</p>
     <p> Zia Farrukh Shaikh</p>
+    <p> Date: <%= date_value %> </p>
 
     <im src="/public/images/Arsenal.jpg">
   </body>
+
+  <p>Please input your username</p>
+
+
 </html>
