--- a/views/ProductTye/addrec.ejs
+++ b/views/ProductTye/addrec.ejs
@@ -1,12 +1,12 @@
 <h1> New Record</h1>
 <form action="/ProductType" method="post">
 <table>
-    <tr> <td> Product ID: </td> <td> <input type="number" name="cusomer_id" required> </td> </tr>
-    <tr> <td> Jersey: </td> <td> <input type="text" name="firstname" required> </td> </tr>
-    <tr> <td> Scarf: </td> <td> <input type="text" name="lastname" required> </td> </tr>
-    <tr> <td> Hat: </td> <td> <input type="text" name="email" required> </td> </tr>
-    <tr> <td> Bobblehead: </td> <td> <input type="number" name="phone" required> </td> </tr>
-    <tr> <td> Posters: </td> <td> <input type="text" name="Street" required> </td> </tr>   
+    <tr> <td> Product ID: </td> <td> <input type="number" name="product_id" required> </td> </tr>
+    <tr> <td> Jersey: </td> <td> <input type="text" name="jersey" required> </td> </tr>
+    <tr> <td> Scarf: </td> <td> <input type="text" name="scarf" required> </td> </tr>
+    <tr> <td> Hat: </td> <td> <input type="text" name="hat" required> </td> </tr>
+    <tr> <td> Bobblehead: </td> <td> <input type="text" name="bobblehead" required> </td> </tr>
+    <tr> <td> Posters: </td> <td> <input type="text" name="posters" required> </td> </tr>   
 </table>
 <button type="Submit">Save</button>
 </form>
