--- a/views/Review/onerec.ejs
+++ b/views/Review/onerec.ejs
@@ -1,9 +1,9 @@
-<h1> Product Details </h1>
+<h1> Order Review </h1>
 <table>
+<tr> <td> Review ID: </td> <td> <%= onerec.review_id %> </td> </tr>
 <tr> <td> Product ID: </td> <td> <%= onerec.product_id %> </td> </tr>
-<tr> <td> Jersey: </td> <td> <%= onerec.jersey %> </td> </tr>
-<tr> <td> Scarf </td> <td> <%= onerec.scarf %> </td> </tr>
-<tr> <td> Hat </td> <td> <%= onerec.hat %> </td> </tr>
-<tr> <td> Bobblehead </td> <td> <%= onerec.bobblehead %> </td> </tr>
-<tr> <td> Posters </td> <td> <%= onerec.posters %> </td> </tr>
+<tr> <td> Customer ID </td> <td> <%= onerec.cusomer_id %> </td> </tr>
+<tr> <td> Submit Date </td> <td> <%= onerec.submitdate %> </td> </tr>
+<tr> <td> Description </td> <td> <%= onerec.description %> </td> </tr>
+<tr> <td> Ratinb </td> <td> <%= onerec.rating %> </td> </tr>
 </table>
