--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,10 +8,16 @@
      <td width='10%' align='center'>Memorabillia</td>
      <td width='10%' align='center'>Cart</td>
     </tr></table>
-    <p> SEARCH CONTROL </p>
+    <p> SEARCH </p>
     <ul>
     <li> <a href="/">Home</a> </li>
     <li> <a href="/about">About Us</a> </li>
     <li> <a href="/contact">Contact Us</a> </li>
+    <li> <a href="/privacy">Privacy Seetings</a> </li>
+    <li> <a href="/help">Help </a> </li>
     <li> <a href="/Customer">Customer</a> </li>
+    <li> <a href="/ProductType">Product Type</a> </li>
+    <li> <a href="/Sale">Sale</a> </li>
+    <li> <a href="/Review">Review</a> </li>
+    <li> <a href="/Rewards">Rewards</a> </li>
     </ul>
