--- a/views/Customer/addrec.ejs
+++ b/views/Customer/addrec.ejs
@@ -1,7 +1,7 @@
 <h1> New Record</h1>
 <form action="/Customer" method="post">
 <table>
-    <tr> <td> Customer ID: </td> <td> <input type="number" name="cusomer_id" required> </td> </tr>
+    <tr> <td> Customer ID: </td> <td> <input type="number" name="customer_id" required> </td> </tr>
     <tr> <td> First Name: </td> <td> <input type="text" name="firstname" required> </td> </tr>
     <tr> <td> Last Name: </td> <td> <input type="text" name="lastname" required> </td> </tr>
     <tr> <td> Email: </td> <td> <input type="text" name="email" required> </td> </tr>
