--- a/views/Review/addrec.ejs
+++ b/views/Review/addrec.ejs
@@ -1,12 +1,12 @@
 <h1> New Record</h1>
-<form action="/ProductType" method="post">
+<form action="/Review" method="post">
 <table>
-    <tr> <td> Product ID: </td> <td> <input type="number" name="cusomer_id" required> </td> </tr>
-    <tr> <td> Jersey: </td> <td> <input type="text" name="firstname" required> </td> </tr>
-    <tr> <td> Scarf: </td> <td> <input type="text" name="lastname" required> </td> </tr>
-    <tr> <td> Hat: </td> <td> <input type="text" name="email" required> </td> </tr>
-    <tr> <td> Bobblehead: </td> <td> <input type="number" name="phone" required> </td> </tr>
-    <tr> <td> Posters: </td> <td> <input type="text" name="Street" required> </td> </tr>   
+    <tr> <td> Review ID: </td> <td> <input type="number" name="review_id" required> </td> </tr>
+    <tr> <td> Product ID: </td> <td> <input type="number" name="product_id" required> </td> </tr>
+    <tr> <td> Customer ID: </td> <td> <input type="number" name="cusomer_id" required> </td> </tr>
+    <tr> <td> Submitdate: </td> <td> <input type="date" name="submitdate" required> </td> </tr>
+    <tr> <td> Description: </td> <td> <input type="text" name="description" required> </td> </tr>
+    <tr> <td> Rating: </td> <td> <input type="number" name="rating" required> </td> </tr>   
 </table>
 <button type="Submit">Save</button>
 </form>
