--- a/views/Review/allrecords.ejs
+++ b/views/Review/allrecords.ejs
@@ -1,29 +1,29 @@
 <% if (allrecs.length > 0) {%>
     <table border="1">
         <tr> 
-            <th>Product ID %></th>
-            <th>Jersey</th>
-            <th>Scarf</th>
-            <th>Hat</th>
-            <th>Bobblehead</th>
-            <th>Posters</th>
+            <th>Review ID %></th>
+            <th>Product ID</th>
+            <th>Customer ID</th>
+            <th>Submit Date</th>
+            <th>Description</th>
+            <th>Rating</th>
         </tr>
     <% allrecs.forEach((recref, index) => { %>
         <tr>
+        <td><%= recref.review_id %></td>
         <td><%= recref.product_id %></td>
-        <td><%= recref.jersey %></td>
-        <td><%= recref.scarf %></td>
-        <td><%= recref.hat %></td>
-        <td><%= recref.bobblehead %></td>
-        <td><%= recref.posters %></td>
-        <td><a href='/ProductType/<%= recref.product_id %>/show'> Details</a></td>
-        <td><a href='/ProductType/<%= recref.product_id %>/edit'> Edit</a></td>
-        <td><a href='/ProductType/<%= recref.product_id %>/delete' onclick="return confirm('Are you sure you want to delete this record?');">Delete</a></td>
+        <td><%= recref.cusomer_id %></td>
+        <td><%= recref.submitdate %></td>
+        <td><%= recref.description %></td>
+        <td><%= recref.rating %></td>
+        <td><a href='/Review/<%= recref.review_id %>/show'> Details</a></td>
+        <td><a href='/Review/<%= recref.review_id %>/edit'> Edit</a></td>
+        <td><a href='/Review/<%= recref.review_id %>/delete' onclick="return confirm('Are you sure you want to delete this record?');">Delete</a></td>
         </tr>
     <% }); %>
     </table>
     <% } else { %>
-            <p>Not Records Available</p>
+            <p>No Records Available</p>
     <% } %>
 
-    <p> <a href= '/ProductType/addrecord'> Add new</a> </p>
+    <p> <a href= '/Review/addrecord'> Add new</a> </p>
