--- a/views/Review/editrec.ejs
+++ b/views/Review/editrec.ejs
@@ -1,13 +1,13 @@
 <h1> Edit</h1>
-<form action="/ProductType/save" method="post">
-    <input type="hidden" name="product_id" value="<%= onerec.product_id %>" >
+<form action="/Review/save" method="post">
+    <input type="hidden" name="review_id" value="<%= onerec.review_id %>" >
 <table>
+    <tr> <td> Review ID: </td> <td> <input type="number" name="review_id" value="<%= onerec.review_id %>" required> </td> </tr>
     <tr> <td> Product ID: </td> <td> <input type="number" name="product_id" value="<%= onerec.product_id %>" required> </td> </tr>
-    <tr> <td> Jersey: </td> <td> <input type="text" name="jersey" value="<%= onerec.jersey %>" required> </td> </tr>
-    <tr> <td> Scarf: </td> <td> <input type="text" name="scarf" value="<%= onerec.scarf %>" required> </td> </tr>
-    <tr> <td> Hat: </td> <td> <input type="text" name="hat" value="<%= onerec.hat %>" required> </td> </tr>
-    <tr> <td> Bobblehead: </td> <td> <input type="text" name="bobblehead" value="<%= onerec.bobblehead %>" required> </td> </tr>
-    <tr> <td> Posters: </td> <td> <input type="text" name="posters" value="<%= onerec.posters %>" required> </td> </tr>
+    <tr> <td> Customer ID: </td> <td> <input type="number" name="cusomer_id" value="<%= onerec.customer_id %>" required> </td> </tr>
+    <tr> <td> Submit Date: </td> <td> <input type="date" name="submitdate" value="<%= onerec.submitdate %>" required> </td> </tr>
+    <tr> <td> Description: </td> <td> <input type="text" name="description" value="<%= onerec.description %>" required> </td> </tr>
+    <tr> <td> Rating: </td> <td> <input type="number" name="rating" value="<%= onerec.rating %>" required> </td> </tr>
 </table>
 <button type="submit">Save</button>
 </form>
