--- a/views/help.ejs
+++ b/views/help.ejs
@@ -4,7 +4,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1>HELP</h1>
+    <h1>Help</h1>
     <P>If you are in need of assistance regarding an order please check our contact page to guide you</P>
    <p>If you have any general querries please contact us on services@thevintagearsenal.com</p>
     <p>Thank you</p>
