--- a/views/Customer/onerec.ejs
+++ b/views/Customer/onerec.ejs
@@ -7,6 +7,6 @@
 <tr> <td> Rewards Number: </td> <td> <%= onerec.rewardsNum %> </td> </tr>
 <tr> <td> Street </td> <td> <%= onerec.street %> </td> </tr>
 <tr> <td> City </td> <td> <%= onerec.city %> </td> </tr>
-<tr> <td> State </td> <td> <%= onerec.State %> </td> </tr>
+<tr> <td> State </td> <td> <%= onerec.state %> </td> </tr>
 <tr> <td> Zip Code: </td> <td> <%= onerec.zipcode %> </td> </tr>
 </table>
