--- a/views/Review/allrecords.ejs
+++ b/views/Review/allrecords.ejs
@@ -12,7 +12,7 @@
         <tr>
         <td><%= recref.review_id %></td>
         <td><%= recref.product_id %></td>
-        <td><%= recref.cusomer_id %></td>
+        <td><%= recref.customer_id %></td>
         <td><%= recref.submitdate %></td>
         <td><%= recref.description %></td>
         <td><%= recref.rating %></td>
