--- a/views/Review/onerec.ejs
+++ b/views/Review/onerec.ejs
@@ -2,8 +2,8 @@
 <table>
 <tr> <td> Review ID: </td> <td> <%= onerec.review_id %> </td> </tr>
 <tr> <td> Product ID: </td> <td> <%= onerec.product_id %> </td> </tr>
-<tr> <td> Customer ID </td> <td> <%= onerec.cusomer_id %> </td> </tr>
+<tr> <td> Customer ID </td> <td> <%= onerec.customer_id %> </td> </tr>
 <tr> <td> Submit Date </td> <td> <%= onerec.submitdate %> </td> </tr>
 <tr> <td> Description </td> <td> <%= onerec.description %> </td> </tr>
-<tr> <td> Ratinb </td> <td> <%= onerec.rating %> </td> </tr>
+<tr> <td> Rating </td> <td> <%= onerec.rating %> </td> </tr>
 </table>
