--- a/views/ProductType/addrec.ejs
+++ b/views/ProductType/addrec.ejs
@@ -7,6 +7,7 @@
     <tr> <td> Hat: </td> <td> <input type="text" name="hat" required> </td> </tr>
     <tr> <td> Bobblehead: </td> <td> <input type="text" name="bobblehead" required> </td> </tr>
     <tr> <td> Posters: </td> <td> <input type="text" name="posters" required> </td> </tr>   
+    <tr> <td> Homepage?: </td> <td> <input type="checkbox" name="homepage" > </td> </tr>   
 </table>
 <button type="Submit">Save</button>
 </form>
