--- a/views/ProductType/editrec.ejs
+++ b/views/ProductType/editrec.ejs
@@ -8,6 +8,7 @@
     <tr> <td> Hat: </td> <td> <input type="text" name="hat" value="<%= onerec.hat %>" required> </td> </tr>
     <tr> <td> Bobblehead: </td> <td> <input type="text" name="bobblehead" value="<%= onerec.bobblehead %>" required> </td> </tr>
     <tr> <td> Posters: </td> <td> <input type="text" name="posters" value="<%= onerec.posters %>" required> </td> </tr>
+    <tr> <td> Homepage?: </td> <td> <input type="checkbox" name="homepage" > </td> </tr>   
 </table>
 <button type="submit">Save</button>
 </form>
