--- a/views/ProductType/onerec.ejs
+++ b/views/ProductType/onerec.ejs
@@ -6,4 +6,5 @@
 <tr> <td> Hat </td> <td> <%= onerec.hat %> </td> </tr>
 <tr> <td> Bobblehead </td> <td> <%= onerec.bobblehead %> </td> </tr>
 <tr> <td> Posters </td> <td> <%= onerec.posters %> </td> </tr>
+<tr> <td> Homepage </td> <td> <%= onerec.homepage %> </td> </tr>
 </table>
