--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,6 @@
+<h1> Application Error </h1>
+<p>Ewwww... something funky happened with the application. </p>
+
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
 <pre><%= error.stack %></pre>
