--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,7 +8,13 @@
      <td width='10%' align='center'>Memorabillia</td>
      <td width='10%' align='center'>Cart</td>
     </tr></table>
-    <p> SEARCH </p>
+    <p>
+    <form action="/search" method="get">
+        <p>Search: <input type="text" name="searchcriteria">
+            <input type="Submit" value="Go">
+        </p>
+    </p>   
+    </form>
     <ul>
     <li> <a href="/">Home</a> </li>
     <li> <a href="/about">About Us</a> </li>
@@ -20,4 +26,5 @@
     <li> <a href="/Sale">Sale</a> </li>
     <li> <a href="/Review">Review</a> </li>
     <li> <a href="/Rewards">Rewards</a> </li>
+    <li> <a href="/report">Reports</a> </li>
     </ul>
