--- a/views/report/allprods.ejs
+++ b/views/report/allprods.ejs
@@ -1,3 +1,4 @@
+<h2>Product Listing</h2>
 <% if (allrecs.length > 0) {%>
     <table border="1">
         <tr> 
@@ -18,14 +19,9 @@
         <td><%= recref.bobblehead %></td>
         <td><%= recref.posters %></td>
         <td><%= recref.Homepage %></td>
-        <td><a href='/ProductType/<%= recref.product_id %>/show'> Details</a></td>
-        <td><a href='/ProductType/<%= recref.product_id %>/edit'> Edit</a></td>
-        <td><a href='/ProductType/<%= recref.product_id %>/delete' onclick="return confirm('Are you sure you want to delete this record?');">Delete</a></td>
         </tr>
     <% }); %>
     </table>
     <% } else { %>
             <p>Not Records Available</p>
     <% } %>
-
-    <p> <a href= '/ProductType/addrecord'> Add new</a> </p>
