--- a/views/report/allsale.ejs
+++ b/views/report/allsale.ejs
@@ -1,3 +1,4 @@
+<h2>Sale Listing</h2>
 <% if (allrecs.length > 0) {%>
     <table border="1">
         <tr>
@@ -15,21 +16,16 @@
         <tr>
         <td><%= recref.sale_id %></td>
         <td><%= recref.product_id %></td>
-        <td><%= recref.customer_id %></td>
+        <td><%= recref.cusomer_id %></td>
         <td><%= recref.firstname %></td>
         <td><%= recref.lastname %></td>
         <td><%= recref.email %></td>
         <td><%= recref.salePrice %></td>
         <td><%= recref.deliveryFee %></td>
         <td><%= recref.deliveryDate %></td>
-        <td><a href='/Sale/<%= recref.sale_id %>/show'> Details</a></td>
-        <td><a href='/Sale/<%= recref.sale_id %>/edit'> Edit</a></td>
-        <td><a href='/Sale/<%= recref.sale_id %>/delete' onclick="return confirm('Are you sure you want to delete this record?');">Delete</a></td>
-        </tr>
+ </tr>
     <% }); %>
     </table>
     <% } else { %>
             <p>Not Records Available</p>
     <% } %>
-
-    <p> <a href= '/Sale/addrecord'> Add new</a> </p>
