--- a/views/search.ejs
+++ b/views/search.ejs
@@ -7,7 +7,6 @@
             <th>Hat</th>
             <th>Bobblehead</th>
             <th>Posters</th>
-            <th>Homepage</th>
         </tr>
     <% allrecs.forEach((recref, index) => { %>
         <tr>
@@ -17,15 +16,10 @@
         <td><%= recref.hat %></td>
         <td><%= recref.bobblehead %></td>
         <td><%= recref.posters %></td>
-        <td><%= recref.Homepage %></td>
         <td><a href='/ProductType/<%= recref.product_id %>/show'> Details</a></td>
-        <td><a href='/ProductType/<%= recref.product_id %>/edit'> Edit</a></td>
-        <td><a href='/ProductType/<%= recref.product_id %>/delete' onclick="return confirm('Are you sure you want to delete this record?');">Delete</a></td>
         </tr>
     <% }); %>
     </table>
     <% } else { %>
-            <p>Not Records Available</p>
+            <p>No Records Available</p>
     <% } %>
-
-    <p> <a href= '/ProductType/addrecord'> Add new</a> </p>
