--- a/views/header.ejs
+++ b/views/header.ejs
@@ -19,7 +19,7 @@
     <li> <a href="/">Home</a> </li>
     <li> <a href="/about">About Us</a> </li>
     <li> <a href="/contact">Contact Us</a> </li>
-    <li> <a href="/privacy">Privacy Seetings</a> </li>
+    <li> <a href="/privacy">Privacy Settings</a> </li>
     <li> <a href="/help">Help </a> </li>
     <li> <a href="/Customer">Customer</a> </li>
     <li> <a href="/ProductType">Product Type</a> </li>
