--- a/views/report/allsale.ejs
+++ b/views/report/allsale.ejs
@@ -16,7 +16,7 @@
         <tr>
         <td><%= recref.sale_id %></td>
         <td><%= recref.product_id %></td>
-        <td><%= recref.cusomer_id %></td>
+        <td><%= recref.customer_id %></td>
         <td><%= recref.firstname %></td>
         <td><%= recref.lastname %></td>
         <td><%= recref.email %></td>
