--- a/views/report/reportmenu.ejs
+++ b/views/report/reportmenu.ejs
@@ -2,6 +2,6 @@
 <p>Available Reports are attached below:</p>
 <p>
     <a href="/report/Customer">Customer Listing</a> <br/>
-    <a href="/report/ProductType">Product Listing</a>
+    <a href="/report/ProductType">Product Listing</a> <br/>
     <a href="/report/Sale">Sale Listing</a>
 </p>
