--- a/views/Review/editrec.ejs
+++ b/views/Review/editrec.ejs
@@ -11,3 +11,33 @@
 </table>
 <button type="submit">Save</button>
 </form>
+
+<tr> <td> Rating: </td>
+    <td>
+    <% if (rec.rating == 1) { %>
+    <input type="radio" name="rating" value="1" checked="true">★ <br/>
+    <% } else { %>
+    <input type="radio" name="rating" value="1">★ <br/>
+    <% }%>
+    <% if (rec.rating == 2) { %>
+    <input type="radio" name="rating" value="2" checked="true">★★<br/>
+    <% } else { %>
+    <input type="radio" name="rating" value="2">★★<br/>
+    <% }%>
+    <% if (rec.rating == 3) { %>
+    <input type="radio" name="rating" value="3" checked="true">★★★<br/>
+    <% } else { %>
+    <input type="radio" name="rating" value="3">★★★<br/>
+    <% }%>
+    <% if (rec.rating == 4) { %>
+    <input type="radio" name="rating" value="4" checked="true">★★★★<br/>
+    <% } else { %>
+    <input type="radio" name="rating" value="4">★★★★<br/>
+    <% }%>
+    <% if (rec.rating == 5) { %>
+    <input type="radio" name="rating" value="5" checked="true">★★★★★<br/>
+    <% } else { %>
+    <input type="radio" name="rating" value="5">★★★★★<br/>
+    <% }%>
+    </td>
+    </tr>
