--- a/views/Sale/addrec.ejs
+++ b/views/Sale/addrec.ejs
@@ -13,3 +13,5 @@
 </table>
 <button type="Submit">Save</button>
 </form>
+<tr> <td> Sale Date: </td> <td> <input type="date"
+    name="saledate" required> </td> </tr>
