--- a/views/Sale/editrec.ejs
+++ b/views/Sale/editrec.ejs
@@ -14,3 +14,5 @@
 </table>
 <button type="submit">Save</button>
 </form>
+<tr> <td> Sale Date: </td> <td> <input type="date"
+    name="saledate" value=<%= rec.saledate.toISOString().split('T')[0] %> required> </td> </tr>
