--- a/views/Review/addrec.ejs
+++ b/views/Review/addrec.ejs
@@ -10,3 +10,12 @@
 </table>
 <button type="Submit">Save</button>
 </form>
+<tr> <td> Rating: </td>
+    <td>
+    <input type="radio" name="rating" value="1">★ <br/>
+    <input type="radio" name="rating" value="2">★★ <br/>
+    <input type="radio" name="rating" value="3">★★★ <br/>
+    <input type="radio" name="rating" value="4">★★★★ <br/>
+    <input type="radio" name="rating" value="5" checked="true" >★★★★★<br/>
+    </td>
+    </tr>
