--- a/views/ProductType/addrec.ejs
+++ b/views/ProductType/addrec.ejs
@@ -6,8 +6,9 @@
     <tr> <td> Scarf: </td> <td> <input type="text" name="scarf" required> </td> </tr>
     <tr> <td> Hat: </td> <td> <input type="text" name="hat" required> </td> </tr>
     <tr> <td> Bobblehead: </td> <td> <input type="text" name="bobblehead" required> </td> </tr>
-    <tr> <td> Posters: </td> <td> <input type="text" name="posters" required> </td> </tr>   
-    <tr> <td> Homepage?: </td> <td> <input type="checkbox" name="homepage" > </td> </tr>   
+    <tr> <td> Posters: </td> <td> <input type="text" name="posters" required> </td> </tr> 
+    <tr> <td> Price: </td> <td> <input type="text" name="price" required> </td> </tr>   
+    <tr> <td> Homepage: </td> <td> <input type="checkbox" name="homepage" > </td> </tr>   
 </table>
 <button type="Submit">Save</button>
 </form>
