--- a/views/header.ejs
+++ b/views/header.ejs
@@ -27,6 +27,7 @@
     <li> <a href="/Review">Review</a> </li>
     <li> <a href="/Rewards">Rewards</a> </li>
     <li> <a href="/report">Reports</a> </li>
+    <li> <a href="/catalog">Catalog</a> </li>
     </ul>
 
     <% if(session.customer_id > 0) { %>
