--- a/views/Customer/addrec.ejs
+++ b/views/Customer/addrec.ejs
@@ -3,13 +3,15 @@
 <table>
     <tr> <td> Customer ID: </td> <td> <input type="number" name="customer_id" required> </td> </tr>
     <tr> <td> First Name: </td> <td> <input type="text" name="firstname" required> </td> </tr>
+    <tr> <td> Username: </td> <td> <input type="text" name="username" required> </td> </tr>
+    <tr> <td> Password: </td> <td> <input type="text" name="password" required> </td> </tr>
     <tr> <td> Last Name: </td> <td> <input type="text" name="lastname" required> </td> </tr>
     <tr> <td> Email: </td> <td> <input type="text" name="email" required> </td> </tr>
-    <tr> <td> Phone: </td> <td> <input type="number" name="phone" required> </td> </tr>
-    <tr> <td> Street: </td> <td> <input type="text" name="Street" required> </td> </tr>
+    <tr> <td> Phone: </td> <td> <input type="text" name="phone" required> </td> </tr>
+    <tr> <td> Street: </td> <td> <input type="text" name="street" required> </td> </tr>
     <tr> <td> City: </td> <td> <input type="text" name="city" required> </td> </tr>
     <tr> <td> State: </td> <td> <input type="text" name="state" required> </td> </tr>
-    <tr> <td> Zip Code: </td> <td> <input type="number" name="zipcode" required> </td> </tr>   
+    <tr> <td> Zip Code: </td> <td> <input type="text" name="zipcode" required> </td> </tr>   
 </table>
 <button type="Submit">Save</button>
 </form>
