--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -8,10 +8,13 @@
     <tr>
         <th>Product ID %></th>
         <th>Jersey</th>
-        <th>Scarf</th>
         <th>Hat</th>
+        <th>Scarf</th>
         <th>Bobblehead</th>
         <th>Posters</th>
+        <th>Price</th>
+        <th>Quantity</th>
+        <th>Line Cost</th>
     </tr>
     </tr>
     <% cartitems.forEach((item, index) => { %>
@@ -22,8 +25,9 @@
         <td><%= item.scarf %></td>
         <td><%= item.bobblehead %></td>
         <td><%= item.posters %></td>
+        <td><%= item.price %></td>
         <% totqty = totqty + parseInt(qtys[index]) %>
-        <% lineitemcost = item.saleprice * parseInt(qtys[index]) %>
+        <% lineitemcost = item.price * parseInt(qtys[index]) %>
         <td><%= qtys[index] %> </td>
         <td><%= lineitemcost %> </td>
         <% totprice = totprice + lineitemcost %>
@@ -36,7 +40,7 @@
     </tr>
     <% }); %>
     <tr bgcolor="yellow" >
-        <td colspan="6"><b>Totals</b></td>
+        <td colspan="7"><b>Totals</b></td>
         <td><%= totqty %></td>
         <td><%= totprice %></td>
         <td><button class='button1' onclick="window.location.href='/catalog/checkout'">Checkout</button></td>
